--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ name: Творчество
 description: 
   Творчество в виде нот, аудиозаписей и книг
 baseurl: "" # the subpath of your site, e.g. /blog
-github_username:  lunohod-odin
+github_username:  tako-a
 
 # jekyll-paginate configuration
 paginate: 10
