--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ exclude:
 include: ["_pages"]
 permalink: /posts/:title/
 excerpt_separator: <!--more-->
-author: http://www.linkedin.com/in/aseren
+author: https://www.linkedin.com/in/aseren
 
 host: 0.0.0.0
 
